update rpz & presentation

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -95,18 +95,18 @@
 	\end{center}
 \end{table}
 
-ER-диаграмма моделируемой области представлена на рисунке \ref{img:ER.drawio}.
+ER-диаграмма моделируемой области представлена на рисунке \ref{img:ER_rus.drawio}.
 
 \includeimage
 	{ER_rus.drawio}
 	{f}
 	{H}
 	{\textwidth}
-	{ER-диаграмма сущностей базы данных в нотации Чена}
+	{ER-диаграмма моделируемой области в нотации Чена}
 
 \section{Описание ролевой модели}
 
-Для управления системой введено три роли: пользователь, аналитик, администратор. На рисунке \ref{img:use_case.drawio} представлена Use-case-диаграмма ПО.
+Для управления системой введено три роли: пользователь, аналитик, администратор. На рисунке \ref{img:use_case.drawio} представлена Use-case-диаграмма.
 
 \includeimage
 	{use_case.drawio}
