--- a/docs/main.tex
+++ b/docs/main.tex
@@ -1,15 +1,17 @@
-\documentclass{bmstu}
+\documentclass[a4paper]{bmstu}
 
 \usepackage{biblatex}
 \addbibresource{biblio.bib}
 
 \begin{document}
 
+\makecourseworktitle{Информатика и системы управления}{Программное обеспечение ЭВМ и информационные технологии}{Система прогнозирования цен на товары в магазинах}{ИУ7-61Б}{И. А. Малышев}{К. А. Кивва}{}{}
+
 \setcounter{page}{3}
 
 \chapter*{РЕФЕРАТ}
 
-Объем РПЗ составляет 50 страниц, содержит 11 иллюстраций, 9 таблиц, 2 приложения и 19 использованных источников.
+Объем РПЗ составляет \begin{NoHyper}\pageref{LastPage}\end{NoHyper} страниц, содержит \totfig~иллюстраций, \tottab~таблиц, 2 приложения и 19 использованных источников.
 
 \textit{Ключевые слова}: прогнозирование цен, модель для прогнозирования цен, товары, магазины, история цен, приложение для работы с БД, СУБД, PostgreSQL, C\#, WPF.
 
@@ -46,8 +48,6 @@
 \end{itemize}
 	
 \chapter{Аналитический раздел}
-
-В данном разделе проведен анализ предметной области, описана ролевая модель, описаны существующие системы управления базами данных и методы построения линии тренда.
 
 \section{Анализ предметной области}
 
@@ -101,7 +101,7 @@ ER-диаграмма моделируемой области представл
 	{ER_rus.drawio}
 	{f}
 	{H}
-	{\textwidth}
+	{0.9\textwidth}
 	{ER-диаграмма моделируемой области в нотации Чена}
 
 \section{Описание ролевой модели}
@@ -161,7 +161,8 @@ ER-диаграмма моделируемой области представл
 	\item поддержка языков БД.
 \end{itemize}
 
-\subsection{Классификация СУБД по модели данных}
+""\newline
+\noindent\textbf{Классификация СУБД по модели данных}
 
 Модель данных --  система типов данных, типов связей между ними и допустимых видов ограничений целостности, которые могут быть для них определены. Здесь имеется в виду современное понимание типа данных как носителя свойств, определяющих и состояние экземпляров типа, и их поведение \cite{kogal}.
 
@@ -175,7 +176,8 @@ ER-диаграмма моделируемой области представл
 \end{itemize}
 
 
-\subsection*{Дореляционные СУБД}
+""\newline
+\noindent\textbf{Дореляционные СУБД}
 
 К ним относятся иерархические и сетевые СУБД.
 
@@ -217,7 +219,8 @@ ER-диаграмма моделируемой области представл
 	\item не является полностью независимой от приложения.
 \end{itemize}
 
-\subsection*{Реляционные СУБД}
+""\newline
+\noindent\textbf{Реляционные СУБД}
 
 Реляционные СУБД ориентированы на организацию данных в виде двумерных таблиц. Каждая реляционная таблица представляет собой двумерный массив и обладает следующими свойствами:
 
@@ -249,7 +252,8 @@ ER-диаграмма моделируемой области представл
 	\item самый медленный доступ к данным.
 \end{itemize}
 
-\subsection*{Постреляционные СУБД}
+""\newline
+\noindent\textbf{Постреляционные СУБД}
 
 Постреляционная модель является расширением реляционной модели. Она снимает ограничение неделимости данных, допуская многозначные поля, значения которых состоят из подзначений, и набор значений воспринимается как самостоятельная таблица, встроенная в главную таблицу \cite{post-rel}.
 
@@ -296,9 +300,22 @@ ER-диаграмма моделируемой области представл
 
 Линия тренда -- прямая или кривая линия, аппроксимирующая (приближающая) исходные данные на основе уравнения регрессии или скользящего среднего \cite{lt-exel}. Аппроксимация определяется по ме­тоду наименьших квадратов \cite{mnk}. В зависимости от характера поведения исходных данных (убыва­ют, возрастают и т.д.) выбирается метод интерполяции, который сле­дует использовать для построения тренда.
 
-\subsection{Виды линий трендов}
+""\newline
+\noindent\textbf{Виды линий трендов}
 
-\subsubsection*{Линейная линия тренда}
+Существует 6 линий тренда, такие как:
+
+\begin{itemize}
+	\item линейная;
+	\item логарифмическая;
+	\item полиномиальная;
+	\item экспоненциальная;
+	\item степенная;
+	\item основанная на линейной фильтрации.
+\end{itemize}
+
+""\newline
+\noindent\textbf{Линейная линия тренда}
 
 Линейная линия тренда определяется функцией
 
@@ -310,7 +327,8 @@ ER-диаграмма моделируемой области представл
 
 Прямая линия тренда (линейный тренд) наилучшим образом подходит для величин, изменяющихся с постоянной скоростью. Приме­няется в случаях, когда точки данных расположены близко к прямой \cite{lt-exel}.
 
-\subsubsection*{Логарифмическая линия тренда}
+""\newline
+\noindent\textbf{Логарифмическая линия тренда}
 
 Логарифмическа линия тренда определяется функцией
 
@@ -322,7 +340,8 @@ ER-диаграмма моделируемой области представл
 
 Логарифмическая линия тренда соответствует ряду данных, значения которого вначале быстро растут или убывают, а затем постепенно стабилизируются. Может использоваться для положительных и отрицательных данных \cite{lt-exel}.
 
-\subsubsection*{Полиномиальная линия тренда}
+""\newline
+\noindent\textbf{Полиномиальная линия тренда}
 
 Полиномиальная линия тренда определяется функцией
 
@@ -334,7 +353,8 @@ ER-диаграмма моделируемой области представл
 
 Полиномиальная линия тренда используется для описания попеременно возрастающих и убывающих данных. Степень полинома подбирают таким образом, чтобы она была на единицу больше количества экстремумов (максимумов и минимумов) кривой \cite{lt-exel}.
 
-\subsubsection*{Экспоненциальная линия тренда}
+""\newline
+\noindent\textbf{Экспоненциальная линия тренда}
 
 Экспоненциальная линия тренда определяется функцией
 
@@ -346,7 +366,8 @@ ER-диаграмма моделируемой области представл
 
 Экспоненциальный тренд используется в случае непрерывного возрастания изменения данных. Построение указанного тренда не­возможно, если в множестве значений членов ряда присутствуют нулевые или отрицательные данные \cite{lt-exel}.
 
-\subsubsection*{Степенная линия тренда}
+""\newline
+\noindent\textbf{Степенная линия тренда}
 
 Степенная линия тренда определяется функцией
 
@@ -358,7 +379,8 @@ ER-диаграмма моделируемой области представл
 
 Степенная линия тренда дает хорошие результаты для положительных данных с постоянным ускорением. Для рядов с нулевыми или отрицательными значениями построение указанной линии трен­да невозможно \cite{lt-exel}.
 
-\subsubsection*{Линейная фильтрация}
+""\newline
+\noindent\textbf{Линейная фильтрация}
 
 Линейная фильтрация определяется формулой
 
@@ -372,18 +394,17 @@ ER-диаграмма моделируемой области представл
 
 Линейная фильтрация использует метод скользящего среднего, при котором каждое значение функции заменяется средним арифметическим $A$ по $t$ соседним точкам, расположенным симметрично относительно данной. Линия тренда в этом случае уравнения не имеет \cite{lin-filt}, поэтому для прогноза изменения величины она не подходит.
 
-\subsection{Анализ исходных данных для построения линии тренда}
+""\newline
+\noindent\textbf{Анализ исходных данных для построения линии тренда}
 
 Цена товара как величина положительная и имеет непостоянный рост: она может как расти, так и падать. Таким образом, для прогнозирования цен на товары подходит полиномиальная линия тренда.
 
-\section*{Вывод к аналитическому разделу}
-\addcontentsline{toc}{section}{Вывод к аналитическому разделу}
+""\newline
+\noindent\textbf{Вывод к аналитическому разделу}
 
 В данном разделе был проведен анализ предметной области, описана ролевая модель, описаны существующие системы управления базами данных и методы построения линии тренда.
 
 \chapter{Конструкторский раздел}
-
-В данном разделе представлена разработанная база данных для поставленной задачи, описаны объекты этой БД, компоненты ПО и система безопасности БД.
 
 \section{Разработка базы данных}
 
@@ -473,55 +494,31 @@ ER-диаграмма моделируемой области представл
 
 Функция \textbf{get\_products\_by\_shopid} возвращает список товаров, продающиеся в указанном магазине с идентификатором shop\_id, реализация которой представлена на листинге 2.1.
 
-\begin{lstlisting}[language=sql, caption={Реализация хранимой функции get\_products\_by\_shopid}]
-create or replace function get_products_by_shopid(shop_id integer)
-returns table(ProdID integer, ProdName text, ProdType text, Cost float)
-as $$
-	select APC.ProductID, APC.Name, APC.ProductType, APC.Cost
-	from (((select Availability.ID as AvailID, Availability.ShopID, Availability.ProductID from Availability where Availability.ShopID = shop_id) as A 
-	join Products on A.ProductID = Products.ID) as AP join Costs on AP.AvailID = Costs.AvailabilityID) as APC;
-$$ language sql;
-\end{lstlisting}
+\newpage
 
+\includelisting
+	{get_products_by_shopid.sql}
+	{Реализация хранимой функции get\_products\_by\_shopid}
 
 Функция \textbf{get\_coststory\_by\_shopid\_prodid} предназначена для поиска полной истории цен на указанный товар в указанном магазине посредством их идентификаторов shop\_id и prod\_id соответственно, реализация которой представлена на листинге 2.2.
 
-\begin{lstlisting}[language=sql, caption={Реализация хранимой функции get\_coststory\_by\_shopid\_prodid}]
-create or replace function get_coststory_by_shopid_prodid(shop_id integer, prod_id integer)
-returns table(Year integer, Month integer, Cost integer)
-as $$
-	select CostStory.Year, CostStory.Month, CostStory.Cost
-	from CostStory
-	where AvailabilityID = (select ID
-	from Availability
-	where ShopID = shop_id and ProductID = prod_id);
-$$ language sql;
-\end{lstlisting}
-
+\includelisting
+	{get_coststory_by_shopid_prodid.sql}
+	{Реализация хранимой функции get\_coststory\_by\_shopid\_prodid}
 
 Функция \textbf{get\_salereceipts\_by\_shopid} возвращает список товарных чеков в указанном магазине посредством его идентификатора shop\_id, реализация которой представлена на листинге 2.3.
 
-\begin{lstlisting}[language=sql, caption={Реализация хранимой функции get\_salereceipts\_by\_shopid}]
-create or replace function get_salereceipts_by_shopid(shop_id integer)
-returns table(SR_ID integer, FIO text, DateOfPurchase date, SummaryCost integer)
-as $$
-	select S.S_ID, max(FIO), max(DateOfPurchase), sum(Cost) as SummaryCost
-	from ((select ID as S_ID, FIO, ShopID, DateOfPurchase from SaleReceipts where ShopID = shop_id) as SR join SaleReceiptPositions on SaleReceiptPositions.SaleReceiptID = SR.S_ID) as S join Costs on S.AvailabilityID = Costs.AvailabilityID
-	group by S.S_ID;
-$$ language sql;
-\end{lstlisting}
+\newpage
+
+\includelisting
+	{get_salereceipts_by_shopid.sql}
+	{Реализация хранимой функции get\_salereceipts\_by\_shopid}
 
 Функция \textbf{get\_content\_from\_salereceipt} возвращает список товаров товарного чека с идентификатором sr\_id, реализация которой представлена на листинге 2.4.
 
-\begin{lstlisting}[language=sql, caption={Реализация хранимой функции get\_content\_from\_salereceipt}]
-create or replace function get_content_from_salereceipt(sr_id integer)
-returns table(ProdID integer, Name text, ProductType text, Cost integer)
-as $$
-	select SAP.ProductID as ProdID, Name, ProductType, Cost::integer
-	from ((SaleReceiptPositions join Availability on SaleReceiptPositions.AvailabilityID = Availability.ID) as SA join Products on Products.ID = SA.ProductID) as SAP join Costs on SAP.AvailabilityID = Costs.AvailabilityID
-	where SaleReceiptID = sr_id;
-$$ language sql;
-\end{lstlisting} 
+\includelisting
+	{get_content_from_salereceipt.sql}
+	{Реализация хранимой функции get\_content\_from\_salereceipt}
 
 Триггер \textbf{remove\_too\_old\_coststory} поддерживает актуальность истории цен, т. е. при вставке нового значения истории цен для некоторого товара в магазине удаляет значения истории цен этого товара, которые являются старше относительно нового значения цены более чем на полтора года.
 
@@ -543,7 +540,7 @@ $$ language sql;
 	{Components.drawio}
 	{f}
 	{H}
-	{\textwidth}
+	{0.9\textwidth}
 	{Диаграмма взаимодействия компонентов ПО}
 
 \section{Разработка системы безопасности БД}
@@ -560,14 +557,12 @@ $$ language sql;
 
 Для каждой роли пароли хранятся в базе данных ролей. Аутентификация происходит при подключении к БД, сравнивая пароль из БД и пароль, указанный в строке подключения к БД.
 
-\section*{Вывод к конструкторскому разделу}
-\addcontentsline{toc}{section}{Вывод к конструкторскому разделу}
+""\newline
+\noindent\textbf{Вывод к конструкторскому разделу}
 
 В данном разделе была представлена разработанная база данных для поставленной задачи, описаны объекты этой БД, компоненты ПО и система безопасности БД.
 
 \chapter{Технологический раздел}
-
-В данном разделе представлены средства реализации, диаграммы классов компонентов и интерфейс программного обеспечения.
 
 \section{Средства реализации}
 
@@ -633,26 +628,26 @@ $$ language sql;
 	{DA}
 	{f}
 	{H}
-	{\textwidth}
+	{0.9\textwidth}
 	{Диаграмма классов компонента доступа к данным}
 	
 На рисунке \ref{img:BL} представлена диаграмма классов компонента бизнес-логики.
 
 \includeimage
-{BL}
-{f}
-{H}
-{\textwidth}
-{Диаграмма классов компонента бизнес-логики}
+	{BL}
+	{f}
+	{H}
+	{0.9\textwidth}
+	{Диаграмма классов компонента бизнес-логики}
 
 На рисунке \ref{img:V} представлена диаграмма классов компонента представления.
 
 \includeimage
-{V}
-{f}
-{H}
-{\textwidth}
-{Диаграмма классов компонента представления}	
+	{V}
+	{f}
+	{H}
+	{0.9\textwidth}
+	{Диаграмма классов компонента представления}	
 
 \section{Интерфейс ПО}
 
@@ -673,7 +668,7 @@ $$ language sql;
 	{ui_user}
 	{f}
 	{H}
-	{\textwidth}
+	{0.9\textwidth}
 	{Работа приложения в режиме пользователя}
 
 На рисунке \ref{img:ui_user} представлено ПО при работе в режиме пользователя. В нем доступен просмотр списка магазинов с возможностью выбора магазина и просмотр данных о выбранном магазине в более удобном виде. Также в нем доступен просмотр списка товаров магазина с возможностью выбора товара и просмотр данных о выбранном товаре в более удобном виде.
@@ -682,7 +677,7 @@ $$ language sql;
 	{ui_analyst}
 	{f}
 	{H}
-	{\textwidth}
+	{0.9\textwidth}
 	{Работа приложения в режиме аналитика}
 	
 На рисунке \ref{img:ui_analyst} представлено ПО при работе в режиме аналитика. В нем доступны все фукнции в режиме пользователя, а также доступен просмотр истории цен на выбранный товар в выбранном магазине и отображение тренда цены.
@@ -691,29 +686,29 @@ $$ language sql;
 	{ui_admin}
 	{f}
 	{H}
-	{\textwidth}
+	{0.9\textwidth}
 	{Работа приложения в режиме администратора}
 
 На рисунке \ref{img:ui_admin} представлено ПО при работе в режиме администратора. В нем доступны все фукнции в режиме аналитика, а также доступен просмотр товарных чеков выбранного магазина, их позиций, а также редактирование информации о магазинах, товарах, товарных чеках и истории цен с помощью соответствующих кнопок.
 
 Для смены режима работы ПО нужно выбрать соответствующий режим в верхнем левом углу окна.
 
-\section*{Вывод к технологическому разделу}
-\addcontentsline{toc}{section}{Вывод к технологическому разделу}
+""\newline
+\noindent\textbf{Вывод к технологическому разделу}
 
 В данном разделе были представлены средства реализации, диаграммы классов компонентов и интерфейс программного обеспечения.
 
 \chapter{Экспериментальный раздел}
 
-В данном разделе поставлен эксперимент по оценке отклонения значения стоимости товара на следующий месяц при неполной выборке истории цен от реального значения стоимости товара на следующий месяц.
-
 \section{Постановка эксперимента}
 
-\subsection{Цель эксперимента}
+""\newline
+\noindent\textbf{Цель эксперимента}
 
 Целью эксперимента является проведение анализа отклонения значения стоимости товара на следующий месяц при неполной выборке истории цен от реального значения стоимости товара на следующий месяц.
 
-\subsection{Описание эксперимента}
+""\newline
+\noindent\textbf{Описание эксперимента}
 
 В данном эксперименте были выбраны три товара с указанными в таблицах 4.1-4.3 историями цен. Далее при расчете очередного значения стоимости товара на следующий месяц при неполной выборке истории цен объем выборки будет ограничиваться от 1 до $N = 18$, где $N$ -- объем полной выборки.
 	
@@ -1130,11 +1125,11 @@ $$ language sql;
 {Errors}
 {f}
 {H}
-{\textwidth}
+{0.9\textwidth}
 {Графическое представление результатов эксперимента}
 
-\section*{Вывод к экспериментальному разделу}
-\addcontentsline{toc}{section}{Вывод к экспериментальному разделу}
+""\newline
+\noindent\textbf{Вывод к экспериментальному разделу}
 
 В данном разделе был поставлен эксперимент по оценке отклонения значения стоимости товара на следующий месяц при неполной выборке истории цен от реального значения стоимости товара на следующий месяц.
 
@@ -1161,11 +1156,37 @@ $$ language sql;
 \chapter*{ПРИЛОЖЕНИЕ А Сценарий создания БД}
 \addcontentsline{toc}{chapter}{ПРИЛОЖЕНИЕ А Сценарий создания БД}
 
+%\includelisting
+%	{init_db.sql}
+%	{Сценарий создания базы данных}
+
 \includelisting
-	{init_db}
-	{Сценарий создания базы данных}
+	{init_db1.sql}
+	{Сценарий создания базы данных, часть 1}
+	
+\includelisting
+	{init_db2.sql}
+	{Сценарий создания базы данных, часть 2}
+
+\includelisting
+	{init_db3.sql}
+	{Сценарий создания базы данных, часть 3}
+\newpage
+\includelisting
+	{init_db4.sql}
+	{Сценарий создания базы данных, часть 4}
+\newpage
+\includelisting
+	{init_db5.sql}
+	{Сценарий создания базы данных, часть 5}
+
+\includelisting
+	{init_db6.sql}
+	{Сценарий создания базы данных, часть 6}
 
 \chapter*{ПРИЛОЖЕНИЕ Б Презентация}
 \addcontentsline{toc}{chapter}{ПРИЛОЖЕНИЕ Б Презентация}
+
+
 
 \end{document}
